[icloud] Implemented TrustManager for icloud-binding
Fixes #3762

Signed-off-by: Martin van Wingerden <martin@martinvw.nl>